[gd_scene load_steps=5 format=2]

[ext_resource path="res://Level Selection.gd" type="Script" id=1]
[ext_resource path="res://LevelSelectionButtons.png" type="Texture" id=2]
[ext_resource path="res://Thintel.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 3 )

[node name="Level Selection" type="Node2D"]
script = ExtResource( 1 )

[node name="Label4" type="Label" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 1026.0
margin_bottom = 106.0
custom_colors/font_color = Color( 0.94902, 0.886275, 0.0196078, 1 )
custom_fonts/font = SubResource( 1 )
text = "noitceleS leveL"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 316, 172 )
texture = ExtResource( 2 )
hframes = 16

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 444, 172 )
texture = ExtResource( 2 )
hframes = 16
frame = 1

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 572, 172 )
texture = ExtResource( 2 )
hframes = 16
frame = 2

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 700, 172 )
texture = ExtResource( 2 )
hframes = 16
frame = 3

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 316, 282 )
texture = ExtResource( 2 )
hframes = 16
frame = 4

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 444, 280 )
texture = ExtResource( 2 )
hframes = 16
frame = 5

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 572, 281 )
texture = ExtResource( 2 )
hframes = 16
frame = 6

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 700, 281 )
texture = ExtResource( 2 )
hframes = 16
frame = 7

[node name="Sprite9" type="Sprite" parent="."]
position = Vector2( 316, 399 )
texture = ExtResource( 2 )
hframes = 16
frame = 8

[node name="Sprite10" type="Sprite" parent="."]
position = Vector2( 444, 397 )
texture = ExtResource( 2 )
hframes = 16
frame = 9

[node name="Sprite11" type="Sprite" parent="."]
position = Vector2( 572, 398 )
texture = ExtResource( 2 )
hframes = 16
frame = 10

[node name="Sprite12" type="Sprite" parent="."]
position = Vector2( 700, 398 )
texture = ExtResource( 2 )
hframes = 16
frame = 11

[node name="Sprite13" type="Sprite" parent="."]
position = Vector2( 316, 515 )
texture = ExtResource( 2 )
hframes = 16
frame = 12

[node name="Sprite14" type="Sprite" parent="."]
position = Vector2( 444, 513 )
texture = ExtResource( 2 )
hframes = 16
frame = 13

[node name="Sprite15" type="Sprite" parent="."]
position = Vector2( 572, 514 )
texture = ExtResource( 2 )
hframes = 16
frame = 14

[node name="Sprite16" type="Sprite" parent="."]
position = Vector2( 700, 514 )
texture = ExtResource( 2 )
hframes = 16
frame = 15
